Fix low latency webgl graphics update

BUG=867025

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I4d6abf4ecfb611a23214d96cd2bfe410c0529476
Reviewed-on: https://chromium-review.googlesource.com/1149003
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578416}
Former-commit-id: bf0ec022e836e41f460fc38c9cc418cc4ae3062e